# PSI-BOIL

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  compile  configure.ac  first  last  test
Src/: Doxyfile  Makefile.am  \  clean  compare_areas.cpp  compile  compile-fast.sh  connect_loop  create_libBoil  disjoint_pressure.cpp  ftp_commands  ftp_transfer  imazu.sh  mconnect  mpreplot  post-stefan.sh  post.sh  setup_circle.cpp  site.f90
Src/Board/: Makefile.am  board.cpp  board.h  color.cpp  color.h  out  point.h  rect.cpp  rect.h  shapes.cpp  shapes.h  transforms.cpp  transforms.h
Src/Board/CVS/: Entries  Repository
Src/Body/: Makefile.am  anglenode.cpp  anglenode.h  body.cpp  body.h  body_acceptor.cpp  body_bd_center.cpp  body_cross_seg_x.cpp  body_cross_seg_y.cpp  body_cross_seg_z.cpp  body_cut.cpp  body_cut_cell.cpp  body_cut_center.cpp  body_cut_degen.cpp  body_cut_duplic.cpp  body_cut_edge_ratio.cpp  body_cut_fluid_area.cpp  body_cut_init.cpp  body_cut_stgd.cpp  body_distfunc.cpp  body_fd_stgd.cpp  body_fill.cpp  body_insert_bc_dist.cpp  body_interface.cpp  body_match_face.cpp  body_nonmember.cpp  body_nonmember.h  body_normalize.cpp  body_nwall.cpp  body_set_match_face.cpp  body_set_vecoff.cpp  body_vol_center.cpp  body_vol_stgd.cpp  cutcell.h  diff-h.out  plane.h  polygon.cpp  polygon.h  polygon_areas.cpp  polygon_arrange.cpp  (+2 more)
Src/Body/CVS/: Entries  Repository
Src/Body/Empty/: empty.h
Src/Boundary/: Makefile.am  bndcnd.cpp  bndcnd.h
Src/Boundary/CVS/: Entries  (+1 more)
Src/CVS/: Entries  Repository
Src/CheckVOF/: 1D-stefan.py  enright.lay  enright.py  front.gnu  go-simple  main-3D-adv.cpp  main-risingBubble-IJNMF.cpp  risingBubble-kappa.py  risingBubble-xyz.gth  test.sh  verify.sh  vol.gnu  zalesak.lay
Src/Custom/: Makefile.am  custom.h  custom_backup_io.cpp  custom_center_face_velocities.cpp  custom_convective_boundary_layer.cpp  custom_droplet_parameters.cpp  custom_interpolate_velocity.cpp  custom_irun.cpp  custom_output_profile.cpp  custom_output_wall_heat_transfer.cpp  custom_prolongate_color.cpp  custom_prolongate_vf.cpp  custom_restrict.cpp  custom_scalar_error.cpp  custom_setup_circle.cpp  custom_setup_sphere.cpp  custom_setup_square.cpp  custom_update_step.cpp  disjoint_pressure.cpp
Src/Domain/: Makefile.am  domain.cpp  domain.h  domain_bnd_symmetry.cpp  domain_coarsen.cpp  domain_decompose.cpp  domain_distribute.cpp  domain_factor.cpp  domain_globals.cpp  domain_ijk.cpp  domain_init.cpp  domain_locals.cpp  domain_save.cpp  domain_setup.cpp  domain_statistics.cpp  domain_surfaces_volumes.cpp
Src/Domain.2023.0705/: Makefile.am  domain.h  domain_distribute.cpp  domain_globals.cpp  domain_init.cpp  domain_locals.cpp  domain_setup.cpp
Src/Equation/: equation.h
Src/Formula/: a.out  compile  formula.cpp  formula.h  main.cpp  scanner.cpp  scanner.h
Src/Formula.2024.0403/: Makefile.am  main.cpp  scanner.cpp  scanner.h
Src/Global/: Makefile.am  global_approx.cpp  global_approx.h  global_buffer_width.cpp  global_buffer_width.h  global_checking.h  global_constants.cpp  global_constants.h  global_endl.cpp  global_endl.h  global_factor.cpp  global_factor.h  global_func.h  global_limiter.cpp  global_limiter.h  global_malloc.cpp  global_malloc.h  global_minmax.cpp  global_minmax.h  global_name_file.cpp  global_name_file.h  global_precision.h  global_random.cpp  global_random.h  global_realistic.h  global_split_string.cpp  global_split_string.h  global_swap.cpp  global_swap.h  global_vectorproduct.cpp  global_vectorproduct.h
Src/Grid/: Makefile.am  grid1d.cpp  grid1d.h  grid1d_correct_boundaries.cpp  grid1d_distribute_nodes_inside.cpp  grid1d_dummy_setup.cpp  step.h
Src/Include/: psi-boil.h
Src/LookUpTable/: Makefile.am  bin_3.cpp  lookuptable.cpp  lookuptable.h  lookuptable_look_up.cpp
Src/Matrix/: matrix.h
Src/Matter/: Makefile.am  matter.cpp  matter.h  matter_rescale.cpp  matter_update.cpp  matter_variable.cpp  property.h  property_value.cpp  property_varies.cpp  set.h
Src/Model/: Makefile.am  diff.out  model.h  model_smagorinsky.cpp  model_smagorinsky_twophase.cpp  model_tangential_velocity.cpp  model_tau_wall.cpp  model_wale.cpp  model_wall_function.cpp
Src/Monitor/: monitor.h
Src/Parallel/: Makefile.am  communicator.cpp  communicator.h  communicator_logo.cpp  parallel.h  sequential.h  tag.h
Src/Plot/: Makefile.am  plot.cpp  plot.h
Src/Profile/: Makefile.am  profile.cpp  profile.h  profile_scale.cpp  profile_value_at.cpp
Src/RandomFlow/: Makefile.am  randomflow.cpp  randomflow.h  randomflow_common.cpp
Src/Ravioli/: Makefile.am  accorder.h  asnodes.h  bndgrid.h  box.h  buffers.h  column.h  comp.cpp  comp.h  cutoff.h  decompose.h  diameter.h  dir.cpp  dir.h  enumerate.h  maxiter.h  periodic.h  range.h  rational.h  resrat.h  restol.h  sign.cpp  sign.h  timescheme.h
Src/STL/: ball-rhino.stl  floor-reverse.stl  floor_wall.stl  floor_x.stl  floor_x_single.stl  floor_x_single0.stl  floor_y.stl  floor_z.stl  simple.stl  square-pillar.stl  square-pillar2.stl  wall-oblique3.stl  x0.stl  y0.stl
Src/SimulationTime/: Makefile.am  simulation_time.cpp  simulation_time.h  simulation_time_control_dt.cpp  simulation_time_print.cpp
Src/Solver/: Makefile.am
Src/Srcfiles/: floor.stl  main.cpp.1d.cond  main.cpp.1d.small  main.cpp.1d.vof  main.cpp.2dcangle  main.cpp.2dcangle.vof  main.cpp.2dprofile  main.cpp.bubblegrowth  main.cpp.bubblegrowth.2d  main.cpp.cipcsl2  main.cpp.cipcsl2.2d  main.cpp.cube  main.cpp.cutoff  main.cpp.dsphere  main.cpp.nucleation  main.cpp.parasitic  main.cpp.quartersphere  main.cpp.reconstruction.circle.xz  main.cpp.reconstruction.triangle.xz  main.cpp.refinecip  main.cpp.rising  main.cpp.sphere.diag  main.cpp.stefan  main.cpp.suck  main.cpp.tension  main.cpp.tension.3d  main.cpp.tension.x-y  main.cpp.tension.xy  main.cpp.tension.xz  main.cpp.tension.yz  main.cpp.vof
Src/Template/: Makefile.am  template.cpp  template.h  template_sum_squares.cpp
Src/Test-Stefan/: color.txt  front-stefan.gnu  front-stefan.out  mdot.txt  temperature.txt  velocity-u.txt
Src/Timer/: Makefile.am  compile  main.cpp  timer.cpp  timer.h
(+2834 files in other folders)
