AC_INIT([PSI-BOIL], [0.0])
AM_INIT_AUTOMAKE([subdir-objects])
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_OUTPUT(Makefile                                     \
          Src/Domain/Makefile                          \
          Src/Global/Makefile                          \
          Src/Field/Scalar/Makefile                    \
          Src/Field/Vector/Makefile                    \
          Src/Field/ScalarBool/Makefile                \
          Src/Field/VectorBool/Makefile                \
          Src/Field/ScalarInt/Makefile                 \
          Src/Matter/Makefile                          \
          Src/Grid/Makefile                            \
          Src/Body/Makefile                            \
          Src/Parallel/Makefile                        \
          Src/Parallel/Out/Makefile                    \
          Src/LookUpTable/Makefile                     \
          Src/Makefile                                 \
          Src/Equation/Centered/Enthalpy/Makefile      \
          Src/Equation/Centered/EnthalpyFD/Makefile    \
          Src/Equation/Centered/Concentration/Makefile \
          Src/Equation/Centered/Pressure/Makefile      \
          Src/Equation/Centered/PhaseChange/Makefile   \
          Src/Equation/Centered/CIPCSL2/Makefile       \
          Src/Equation/Centered/Distance/Makefile      \
          Src/Equation/Centered/Makefile               \
          Src/Equation/Staggered/Momentum/Makefile     \
          Src/Equation/Staggered/Makefile              \
          Src/Equation/Dispersed/Makefile              \
          Src/Equation/Lagrangian/Makefile             \
          Src/Equation/Floodfill/Makefile              \
          Src/Boundary/Makefile                        \
          Src/Solver/Makefile                          \
          Src/Ravioli/Makefile                         \
          Src/SimulationTime/Makefile                  \
          Src/RandomFlow/Makefile                      \
          Src/Timer/Makefile                           \
          Src/Monitor/Location/Makefile                \
          Src/Monitor/Rack/Makefile                    \
          Src/Formula/Makefile                         \
          Src/Profile/Makefile                         \
          Src/Model/Makefile                           \
          Src/Plot/Makefile                            \
          Src/Plot/GMV/Makefile                        \
          Src/Plot/TEC/Makefile                        \
          Src/Plot/VTK/Makefile                        \
          Src/Unstructured/Solver/Makefile             \
          Src/Utilities/Connect/Makefile               \
          Src/Utilities/MovieScript/Makefile           \
          Src/Utilities/ChangeProc/Makefile            \
          Src/Template/Makefile)
