#AC_INIT
#AM_INIT_AUTOMAKE(PSI-Boil,0.3)
AC_INIT(PSI-Boil,0.3)
AM_INIT_AUTOMAKE([subdir-objects])
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_OUTPUT(Makefile                                                             \
          Src/Custom/Makefile                                                  \
          Src/Domain/Makefile                                                  \
          Src/Domain/Axisymmetric/Makefile                                     \
          Src/Global/Makefile                                                  \
          Src/Field/Scalar/Makefile                                            \
          Src/Field/Vector/Makefile                                            \
          Src/Field/ScalarBool/Makefile                                        \
          Src/Field/VectorBool/Makefile                                        \
          Src/Field/ScalarInt/Makefile                                         \
          Src/Matter/Makefile                                                  \
          Src/Grid/Makefile                                                    \
          Src/Body/Makefile                                                    \
          Src/Parallel/Makefile                                                \
          Src/Parallel/Out/Makefile                                            \
          Src/LookUpTable/Makefile                                             \
          Src/Makefile                                                         \
          Src/Equation/Centered/Enthalpy/Makefile                              \
          Src/Equation/Centered/EnthalpyFD/EnthalpyFDaxisym/Makefile           \
          Src/Equation/Centered/EnthalpyFD/Makefile                            \
          Src/Equation/Centered/Concentration/Makefile                         \
          Src/Equation/Centered/ConcentrationTP/Makefile                       \
          Src/Equation/Centered/CavityPressure/CPaxisym/Makefile               \
          Src/Equation/Centered/CavityPressure/Makefile                        \
          Src/Equation/Centered/Pressure/Makefile                              \
          Src/Equation/Centered/PhaseChange/Makefile                           \
          Src/Equation/Centered/PhaseChangeVOF/Makefile                        \
          Src/Equation/Centered/PhaseChange4/Makefile                          \
          Src/Equation/Centered/CIPCSL2/Makefile                               \
          Src/Equation/Centered/VOF/VOFaxisym/Makefile                         \
          Src/Equation/Centered/VOF/Makefile                                   \
          Src/Equation/Centered/Distance/Makefile                              \
          Src/Equation/Centered/Makefile                                       \
          Src/Equation/Staggered/Momentum/Makefile                             \
          Src/Equation/Staggered/Makefile                                      \
          Src/Equation/Dispersed/Makefile                                      \
          Src/Equation/Floodfill/Makefile                                      \
          Src/Equation/Heaviside/MarchingCubes/Makefile                        \
          Src/Equation/Heaviside/MarchingSquares/MSaxisym/Makefile             \
          Src/Equation/Heaviside/MarchingSquares/Makefile                      \
          Src/Equation/Heaviside/Makefile                                      \
          Src/Equation/Nucleation/Makefile                                     \
          Src/Equation/Tifmodel/Antoine/Makefile                               \
          Src/Equation/Tifmodel/Clapeyron/Makefile                             \
          Src/Equation/Tifmodel/Schrage/Makefile                               \
          Src/Equation/Tifmodel/Makefile                                       \
          Src/Equation/Topology/Makefile                                       \
          Src/Boundary/Makefile                                                \
          Src/Solver/Additive/Makefile                                         \
          Src/Solver/Linear/Makefile                                           \
          Src/Solver/Linear/Gauss/Makefile                                     \
          Src/Solver/Linear/Iterative/Makefile                                 \
          Src/Solver/Linear/Krylov/Makefile                                    \
          Src/Solver/Preconditioner/Makefile                                   \
          Src/Ravioli/Makefile                                                 \
          Src/SimulationTime/Makefile                                          \
          Src/RandomFlow/Makefile                                              \
          Src/Timer/Makefile                                                   \
          Src/Monitor/Location/Makefile                                        \
          Src/Monitor/Rack/Makefile                                            \
          Src/Formula/Makefile                                                 \
          Src/Profile/Makefile                                                 \
          Src/Model/Makefile                                                   \
          Src/Plot/Makefile                                                    \
          Src/Plot/TEC/Makefile                                                \
          Src/Plot/VTK/Makefile                                                \
          Src/Unstructured/Solver/Makefile                                     \
          Src/Utilities/Connect/Makefile                                       \
          Src/Utilities/MovieScript/Makefile                                   \
          Src/Utilities/ChangeProc/Makefile                                    \
          Src/Template/Makefile)
