bin_PROGRAMS = Boil

Boil_SOURCES = main.cpp    \
               Ravioli/*.h

SUBDIRS = Equation/Staggered/Momentum                              \
          Equation/Staggered                                       \
          Solver/Additive                                          \
          Solver/Linear/Gauss                                      \
          Solver/Linear/Iterative                                  \
          Solver/Linear/Krylov                                     \
          Solver/Linear                                            \
          Solver/Preconditioner                                    \
          Equation/Centered/ElectPoten                             \
          Equation/Centered/Enthalpy                               \
          Equation/Centered/EnthalpyFD/EnthalpyFDaxisym            \
          Equation/Centered/EnthalpyFD                             \
          Equation/Centered/Concentration                          \
          Equation/Centered/ConcentrationTP                        \
          Equation/Centered/CavityPressure/CPaxisym                \
          Equation/Centered/CavityPressure                         \
          Equation/Centered/Pressure                               \
          Equation/Centered/PhaseChange4                           \
          Equation/Centered/CIPCSL2                                \
          Equation/Centered/VOF/VOFaxisym                          \
          Equation/Centered/VOF                                    \
          Equation/Centered/Distance                               \
          Equation/Centered                                        \
          Equation/CommonHeatTransfer                              \
          Equation/Dispersed                                       \
          Equation/Floodfill                                       \
          Equation/Heaviside/MarchingCubes                         \
          Equation/Heaviside/MarchingSquares/MSaxisym              \
          Equation/Heaviside/MarchingSquares                       \
          Equation/Heaviside                                       \
          Equation/Nucleation/Microlayer                           \
          Equation/Nucleation                                      \
          Equation/Tifmodel/Antoine                                \
          Equation/Tifmodel/Clapeyron                              \
          Equation/Tifmodel                                        \
          Equation/Topology                                        \
          Monitor/Rack                                             \
          Monitor/Location                                         \
          Matter                                                   \
          LookUpTable                                              \
          Grid                                                     \
          Plot                                                     \
          Plot/TEC                                                 \
          Plot/VTK                                                 \
          Custom/IF97                                              \
          Custom                                                   \
          Domain/Axisymmetric                                      \
          Domain                                                   \
          Body                                                     \
          Model                                                    \
	  Field/Vector/TwoLevelVector                              \
          Field/Vector                                             \
          Field/Scalar/TwoLevelScalar                              \
          Field/Scalar                                             \
          Field/ScalarBool                                         \
          Field/VectorBool                                         \
          Field/ScalarInt                                          \
          Timer                                                    \
          Formula                                                  \
          Profile                                                  \
          RandomFlow                                               \
          Global                                                   \
          Boundary                                                 \
          Ravioli                                                  \
          SimulationTime                                           \
          Parallel/Out                                             \
          Parallel                                                 \
          Template

LDADD = Custom/IF97/libIF97.a                                                 \
        Custom/libCustom.a                                                    \
        Solver/Additive/libAdditive.a                                         \
        Solver/Linear/Gauss/libGauss.a                                        \
        Solver/Linear/Iterative/libIterative.a                                \
        Solver/Linear/Krylov/libKrylov.a                                      \
        Solver/Linear/libLinear.a                                             \
        Solver/Preconditioner/libPreconditioner.a                             \
        Equation/Staggered/Momentum/libMomentum.a                             \
        Equation/Staggered/libStaggered.a                                     \
        Equation/Centered/ElectPoten/libElectPoten.a                          \
        Equation/Centered/Enthalpy/libEnthalpy.a                              \
        Equation/Centered/EnthalpyFD/EnthalpyFDaxisym/libEnthalpyFDaxisym.a   \
        Equation/Centered/EnthalpyFD/libEnthalpyFD.a                          \
        Equation/Centered/Concentration/libConcentration.a                    \
        Equation/Centered/ConcentrationTP/libConcentrationTP.a                \
        Equation/Centered/CavityPressure/CPaxisym/libCPaxisym.a               \
        Equation/Centered/CavityPressure/libCavityPressure.a                  \
        Equation/Centered/Pressure/libPressure.a                              \
        Equation/Centered/PhaseChange4/libPhaseChange4.a                      \
        Equation/Centered/CIPCSL2/libCipcsl2.a                                \
        Equation/Centered/VOF/VOFaxisym/libVOFaxisym.a                        \
        Equation/Centered/VOF/libVof.a                                        \
        Equation/Centered/Distance/libDistance.a                              \
        Equation/Centered/libCentered.a                                       \
        Equation/Dispersed/libDispersed.a                                     \
        Equation/Floodfill/libFloodfill.a                                     \
	Equation/Heaviside/MarchingCubes/libMarchingCubes.a                   \
	Equation/Heaviside/MarchingSquares/MSaxisym/libMSaxisym.a             \
	Equation/Heaviside/MarchingSquares/libMarchingSquares.a               \
	Equation/Heaviside/libHeaviside.a                                     \
        Equation/Nucleation/Microlayer/libMicrolayer.a                        \
	Equation/Nucleation/libNucleation.a                                   \
        Equation/Tifmodel/Antoine/libAntoine.a                                \
        Equation/Tifmodel/Clapeyron/libClapeyron.a                            \
        Equation/CommonHeatTransfer/libCommonHeatTransfer.a                   \
        Equation/Tifmodel/libTif.a                                            \
        Equation/Topology/libTopology.a                                       \
        Monitor/Rack/libRack.a                                                \
        Monitor/Location/libLocation.a                                        \
        Matter/libMatter.a                                                    \
        LookUpTable/libLookUpTable.a                                          \
        Grid/libGrid.a                                                        \
        Plot/libPlot.a                                                        \
        Plot/TEC/libPlotTEC.a                                                 \
        Plot/VTK/libPlotVTK.a                                                 \
        Domain/libDomain.a                                                    \
        Domain/Axisymmetric/libAxisymmetric.a                                 \
        Body/libBody.a                                                        \
        Model/libModel.a                                                      \
        Field/Vector/TwoLevelVector/libTwoLevelVector.a                       \
        Field/Vector/libVector.a                                              \
        Field/Scalar/TwoLevelScalar/libTwoLevelScalar.a                       \
        Field/Scalar/libScalar.a                                              \
        Field/VectorBool/libVectorBool.a                                      \
        Field/ScalarBool/libScalarBool.a                                      \
        Field/ScalarInt/libScalarInt.a                                        \
        Domain/libDomain.a                                                    \
        Timer/libTimer.a                                                      \
        Formula/libFormula.a                                                  \
        Profile/libProfile.a                                                  \
        RandomFlow/libRandomFlow.a                                            \
        Global/libGlobal.a                                                    \
        Boundary/libBoundary.a                                                \
        Ravioli/libRavioli.a                                                  \
        SimulationTime/libSimulationTime.a                                    \
        Parallel/Out/libOut.a                                                 \
        Parallel/libParallel.a                                                \
        Template/libTemplate.a
