noinst_LIBRARIES = libBoard.a
libBoard_a_SOURCES = board.h        \
                     board.cpp      \
                     color.h        \
                     color.cpp      \
                     point.h        \
                     rect.h         \
                     rect.cpp       \
                     shapes.h       \
                     shapes.cpp     \
                     transforms.h   \
                     transforms.cpp

INCLUDE = -I@top_srcdir@/
