noinst_LIBRARIES = libBody.a
libBody_a_SOURCES = body.h                  \
                    anglenode.h             \
                    anglenode.cpp           \
                    body_nonmember.h        \
                    body_nonmember.cpp      \
                    cutcell.h               \
                    plane.h                 \
                    polygon.h               \
                    polygon.cpp             \
                    polygon_areas.cpp       \
                    polygon_arrange.cpp     \
                    polygon_foot.cpp        \
                    polygon_split.cpp       \
                    body.cpp                \
                    body_acceptor.cpp       \
                    body_bd_center.cpp      \
                    body_cross_seg_x.cpp    \
                    body_cross_seg_y.cpp    \
                    body_cross_seg_z.cpp    \
                    body_cut.cpp            \
                    body_cut_cell.cpp       \
                    body_cut_center.cpp     \
                    body_cut_degen.cpp      \
                    body_cut_duplic.cpp     \
                    body_cut_edge_ratio.cpp \
                    body_cut_fluid_area.cpp \
                    body_cut_init.cpp       \
                    body_cut_stgd.cpp       \
                    body_distfunc.cpp       \
                    body_fill.cpp           \
                    body_insert_bc_dist.cpp \
                    body_interface.cpp      \
                    body_match_face.cpp     \
                    body_normalize.cpp      \
                    body_nwall.cpp          \
                    body_set_vecoff.cpp     \
                    body_vol_center.cpp     \
                    body_vol_stgd.cpp

INCLUDE = -I@top_srcdir@/
