noinst_LIBRARIES = libCustom.a
libCustom_a_SOURCES = custom.h                      \
                      custom_droplet_parameters.cpp \
                      custom_scalar_error.cpp       \
                      custom_setup_circle.cpp       \
                      custom_update_step.cpp

INCLUDE = -I@top_srcdir@/
