noinst_LIBRARIES = libCustom.a
libCustom_a_SOURCES = custom.h                            \
                      custom_convective_boundary_layer.cpp\
                      custom_droplet_parameters.cpp       \
                      custom_interpolate_velocity.cpp     \
                      custom_output_profile.cpp           \
                      custom_restrict.cpp                 \
                      custom_scalar_error.cpp             \
                      custom_setup_circle.cpp             \
                      custom_setup_sphere.cpp             \
                      custom_update_step.cpp

INCLUDE = -I@top_srcdir@/
