noinst_LIBRARIES = libCustom.a
libCustom_a_SOURCES = custom.h                            \
                      custom_backup_io.cpp                \
                      custom_center_face_velocities.cpp   \
                      custom_convective_boundary_layer.cpp\
                      custom_droplet_parameters.cpp       \
                      custom_irun.cpp                     \
                      custom_output_profile.cpp           \
                      custom_output_wall_heat_transfer.cpp\
                      custom_prolongate_color.cpp         \
                      custom_scalar_error.cpp             \
                      custom_setup_circle.cpp             \
                      custom_setup_sphere.cpp             \
                      custom_setup_square.cpp             \
                      custom_update_step.cpp

INCLUDE = -I@top_srcdir@/
