noinst_LIBRARIES = libDomain.a
libDomain_a_SOURCES = domain.h                   \
                      domain.cpp                 \
                      domain_coarsen.cpp         \
                      domain_decompose.cpp       \
                      domain_distribute.cpp      \
                      domain_factor.cpp          \
                      domain_globals.cpp         \
                      domain_ijk.cpp             \
                      domain_init.cpp            \
                      domain_locals.cpp          \
                      domain_setup.cpp           \
                      domain_statistics.cpp      \
                      domain_surfaces_volumes.cpp

INCLUDE = -I@top_srcdir@/
