noinst_LIBRARIES = libGlobal.a
libGlobal_a_SOURCES = global_approx.h         \
                      global_buffer_width.h   \
                      global_checking.h       \
                      global_constants.h      \
                      global_endl.h           \
                      global_factor.h         \
                      global_limiter.h        \
                      global_malloc.h         \
                      global_minmax.h         \
                      global_name_file.h      \
                      global_precision.h      \
                      global_random.h         \
                      global_realistic.h      \
                      global_split_string.h   \
                      global_swap.h           \
                      global_approx.cpp       \
                      global_buffer_width.cpp \
                      global_constants.cpp    \
                      global_endl.cpp         \
                      global_factor.cpp       \
                      global_limiter.cpp      \
                      global_malloc.cpp       \
                      global_minmax.cpp       \
                      global_name_file.cpp    \
                      global_random.cpp       \
                      global_split_string.cpp \
                      global_swap.cpp

INCLUDE = -I@top_srcdir@/
