noinst_LIBRARIES = libGrid.a
libGrid_a_SOURCES = grid1d.h                      \
                    grid1d.cpp                    \
                    grid1d_correct_boundaries.cpp \
                    grid1d_dummy_setup.cpp        \
                    grid1d_distribute_nodes_inside.cpp

INCLUDE = -I@top_srcdir@/
