noinst_LIBRARIES = libMatter.a
libMatter_a_SOURCES =  matter.h            \
                       matter.cpp          \
                       matter_rescale.cpp  \
                       matter_update.cpp   \
                       matter_variable.cpp \
                       property.h          \
                       property_value.cpp  \
                       property_varies.cpp \
                       set.h

INCLUDE = -I@top_srcdir@/
