noinst_LIBRARIES = libModel.a
libModel_a_SOURCES = model.h                       \
                     model_smagorinsky.cpp         \
                     model_wale.cpp                \
                     model_tangential_velocity.cpp \
                     model_tau_wall.cpp            \
                     model_wall_function.cpp

INCLUDE = -I@top_srcdir@/
