noinst_LIBRARIES = libSimulationTime.a
libSimulationTime_a_SOURCES =  simulation_time.h              \
                               simulation_time.cpp            \
                               simulation_time_control_dt.cpp \
                               simulation_time_print.cpp     

INCLUDE = -I@top_srcdir@/
